Fix overflow on journeys page

--- a/src/styles/pages/sites/[site_id]/_journeys.scss
+++ b/src/styles/pages/sites/[site_id]/_journeys.scss
@@ -1,5 +1,6 @@
 .page.sites.journeys {
   #main {
+    min-width: 0;
     padding-bottom: 0;
   }
 
